refactor: 调整结构，使用panic abort

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -127,6 +127,15 @@ jobs:
           done
           rm -f output/flag.txt
 
+      - name: "⚙️ Reset flags"
+        shell: bash
+        run: |
+          for bin_name in "uv" "uvx" "uvw"; do
+              rm -rf .cargo/ || echo "无需删除目录"
+              mkdir -p .cargo/
+              curl -L https://github.com/reigadegr/uv_action/raw/main/.cargo/config.toml -o .cargo/config.toml
+          done
+
       - name: Build Rust Utils
         shell: bash
         run: |
@@ -141,7 +150,7 @@ jobs:
               platform="${{ contains(github.event.inputs.TARGET, 'windows') && 'windows' || (contains(github.event.inputs.TARGET, 'apple') && 'apple' || 'linux') }}"
               file="build_"$toolchain"_"$platform".sh"
 
-              url="https://github.com/reigadegr/uv_action/raw/main/$file"
+              url="https://github.com/reigadegr/uv_action/raw/main/script/$file"
               echo "脚本直链: $url"
               curl -L $url -o "$file"
               sh "$file" "${{ matrix.target }}" "$bin_name" || continue
