chore: 默认为win msvc，不删除已构建的产物

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -15,7 +15,7 @@ on:
         type: choice
         description: "编译的目标三元组"
         required: true
-        default: "aarch64-unknown-linux-musl"
+        default: "x86_64-pc-windows-msvc"
         options:
           - "aarch64-unknown-linux-musl"
           - "x86_64-unknown-linux-musl"
@@ -162,7 +162,7 @@ jobs:
               file="$(find target -name "$bin_name")"
               echo "$(realpath $file)"              
               dd if=target/"${{ matrix.target }}"/release/$bin_name of=../output/$bin_name
-              rm -rf target
+              # rm -rf target
           done
 
       - name: Upload to GitHub artifacts
